--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "textdiff-patch",
-  "version": "1.0.9",
+  "version": "1.1.0",
   "description": "Apply lean text diff delta patches created by textdiff-create.",
   "main": "index.js",
   "scripts": {
@@ -24,7 +24,12 @@
   },
   "homepage": "https://github.com/icflorescu/textdiff-patch#readme",
   "devDependencies": {
-    "mocha": "^9.2.2",
+    "@types/node": "^20.3.1",
+    "eslint": "^8.42.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "mocha": "^10.2.0",
+    "prettier": "^2.8.8",
     "should": "^13.2.3"
   }
 }
