--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "textdiff-patch",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "Apply lean text diff delta patches created by textdiff-create.",
   "main": "index.js",
   "scripts": {
@@ -19,6 +19,10 @@
   ],
   "author": "Ionut-Cristian Florescu <ionut.florescu@gmail.com>",
   "license": "ISC",
+  "funding": {
+    "type": "github",
+    "url": "https://github.com/sponsors/icflorescu"
+  },
   "bugs": {
     "url": "https://github.com/icflorescu/textdiff-patch/issues"
   },
