--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "textdiff-patch",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "Apply lean text diff delta patches created by textdiff-create.",
   "main": "index.js",
   "scripts": {
@@ -17,7 +17,11 @@
     "patch",
     "lean"
   ],
-  "author": "Ionut-Cristian Florescu <ionut.florescu@gmail.com>",
+  "author": {
+    "name": "Ionut-Cristian Florescu",
+    "email": "ionut.florescu@gmail.com",
+    "url": "https://github.com/icflorescu"
+  },
   "license": "ISC",
   "funding": {
     "type": "github",
