--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Apply lean text diff delta patches created by textdiff-create.",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "vitest"
   },
   "repository": {
     "type": "git",
@@ -36,8 +36,7 @@
     "eslint": "^8.48.0",
     "eslint-config-prettier": "^8.10.0",
     "eslint-plugin-prettier": "^5.0.0",
-    "mocha": "^10.2.0",
     "prettier": "^3.0.3",
-    "should": "^13.2.3"
+    "vitest": "^0.34.3"
   }
 }
